--- a/mara/package.json
+++ b/mara/package.json
@@ -11,8 +11,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,7 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://localhost:8082",
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
-  ,
-  "proxy":"http://localhost:8082"
 }
